# cookiecutter-data-science

./: README.md  cookiecutter.json
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: .gitignore  .lsyncd.lua  .remote-sync.json  Makefile  README.md  environment.yml  nb_in_env.sh  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/notebooks/: notebook.ipynb
