[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="{{ cookiecutter.package_name }}"
version="0.1.0"
description="{{ cookiecutter.description }}"
authors = [
  {name = "{{ cookiecutter.author_name }}"},
]
license = {file = "LICENSE"}
readme = "README.md"
